<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

    <com.soleap.cashbook.common.widget.StringEditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/require"
        app:ev_hint="@string/name" />

    <com.soleap.cashbook.common.widget.StringEditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/require"
        app:ev_hint="@string/address" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_enable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/active"/>

</LinearLayout>
