<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:text="@string/general"
        android:textColor="@color/lite_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.soleap.cashbook.common.widget.BarcodeStringEditText
        android:id="@+id/txt_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/barcode"
        app:ev_hint="@string/barcode" />

    <com.soleap.cashbook.common.widget.StringEditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/require"
        app:ev_hint="@string/name" />

    <com.soleap.cashbook.common.widget.lookup.DocumentLookupEditText
        android:id="@+id/txt_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_doc_field_name="name"
        app:ev_doc_name="category"
        app:ev_endIconDrawable="@drawable/ic_arrow_down"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/require"
        app:ev_hint="@string/category" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_enable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checked="true"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/gray_dark"
        android:text="@string/active"/>



    <TextView
        android:text="@string/general"
        android:textColor="@color/lite_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.soleap.cashbook.common.widget.lookup.DocumentLookupEditText
        android:id="@+id/txt_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ev_doc_field_name="name"
        app:ev_doc_name="account"
        app:ev_endIconDrawable="@drawable/ic_arrow_down"
        app:ev_errorEnabled="true"
        app:ev_helperText="@string/require"
        app:ev_hint="@string/account" />

    <com.soleap.cashbook.common.widget.CurrencyEditText
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        app:ev_hint="@string/price"
        app:ev_helperText="@string/require"
        app:ev_errorEnabled="true"
        android:layout_height="wrap_content" />

    <com.soleap.cashbook.common.widget.CurrencyEditText
        android:id="@+id/txt_cost"
        android:layout_width="match_parent"
        app:ev_hint="@string/cost"
        app:ev_helperText="@string/require"
        app:ev_errorEnabled="true"
        android:layout_height="wrap_content" />

</LinearLayout>
