<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="your activity context here">
    <item
        android:id="@+id/menu_item_vehicle_condition_new"
        android:title="@string/ORDER_PAYMENT_VEHICLE_STATUS_NEW"
        android:icon="@drawable/ic_more"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/menu_item_vehicle_condition_used"
        android:title="@string/ORDER_PAYMENT_VEHICLE_STATUS_USED"
        android:icon="@drawable/ic_more"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/menu_item_vehicle_condition_secondhand"
        android:title="@string/ORDER_PAYMENT_VEHICLE_STATUS_SECONDHAND"
        android:icon="@drawable/ic_more"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>