<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_customer_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/name"
        app:errorEnabled="true"
        app:helperText="@string/require">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_customer_name"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <include layout="@layout/form_institute_address"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_enable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/active"/>

</LinearLayout>
