<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cashbook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical"
    android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.soleap.cashbook.common.widget.DatePickerView
                android:id="@+id/so_datepicker"
                app:dpv_label="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.soleap.cashbook.common.widget.lookup.DocLookupTextInputView
                android:id="@+id/so_branch"
                app:dltv_title="@string/branch"
                app:dltv_doc_name="branch"
                app:dltv_helperText="@string/require"
                android:layout_width="match_parent"
                app:dltv_endIconDrawable="@drawable/ic_arrow_right"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_paymentOptions"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                app:endIconDrawable="@drawable/ic_arrow_right"
                app:endIconMode="custom"
                android:hint="@string/paymentoption">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/so_paymentOptions"
                    android:inputType="none"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.soleap.cashbook.common.widget.lookup.DocLookupTextInputView
                android:id="@+id/so_institute"
                app:dltv_title="@string/institute"
                android:visibility="gone"
                app:dltv_doc_name="institute"
                app:dltv_helperText="@string/require"
                android:layout_width="match_parent"
                app:dltv_endIconDrawable="@drawable/ic_arrow_right"
                android:layout_height="wrap_content"/>

            <com.soleap.cashbook.common.widget.lookup.DocLookupTextInputView
                android:id="@+id/so_customer"
                app:dltv_title="@string/customer"
                app:dltv_doc_name="contact"
                app:dltv_helperText="@string/require"
                android:layout_width="match_parent"
                app:dltv_endIconDrawable="@drawable/ic_arrow_right"
                android:layout_height="wrap_content"/>

            <com.soleap.cashbook.common.widget.lookup.DocLookupTextInputView
                android:id="@+id/so_item"
                app:dltv_title="@string/item"
                app:dltv_doc_name="item"
                app:dltv_helperText="@string/require"
                android:layout_width="match_parent"
                app:dltv_endIconDrawable="@drawable/ic_arrow_right"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_vehicle_condition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                app:endIconDrawable="@drawable/ic_arrow_right"
                app:endIconMode="custom"
                android:hint="@string/vehicle_condition">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/so_vehicle_condition"
                    android:inputType="none"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_quantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                android:visibility="gone"
                android:hint="@string/quantity">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/so_quantity"
                    android:text="1"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                android:hint="@string/price">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/so_price"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_booking_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                android:hint="@string/booking_amount">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/so_booking_amt"
                    android:inputType="numberDecimal"
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

</LinearLayout>
